<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/action_users" />
        <item
            android:id="@+id/nav_chatrooms"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/action_chatroom" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/action_exit"/>
    </group>

</menu>
