<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ShowChatFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewShowChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/new_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_message"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/send_new_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_message" />

            <Button
                android:id="@+id/showUsersInChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_users" />

            <Button
                android:id="@+id/addUserToChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_users" />

            <Button
                android:id="@+id/leaveChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave_chat" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>