<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChatFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_chat_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/input_name_chat"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/name_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_chat"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/add_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_chat" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>