<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.matrosov.vladimir.diplom.client.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/email_input_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/firstName_input_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/email_input_registration"
            android:layout_below="@+id/email_input_registration"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="87dp" />

        <EditText
            android:id="@+id/lastName_input_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/firstName_input_registration"
            android:layout_below="@+id/firstName_input_registration"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="160dp" />

        <EditText
            android:id="@+id/post_input_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lastName_input_registration"
            android:layout_below="@+id/lastName_input_registration"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/password1_input_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/post_input_registration"
            android:layout_below="@+id/post_input_registration"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="304dp" />

        <EditText
            android:id="@+id/password2_input_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/password1_input_registration"
            android:layout_below="@+id/password1_input_registration"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="381dp" />

        <Button
            android:id="@+id/registration_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewPassword2"
            android:layout_marginTop="20dp"
            android:onClick="actionRegistration"
            android:text="@string/action_registration"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="447dp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/email_input_registration"
            android:layout_marginStart="17dp"
            android:layout_toRightOf="@+id/email_input_registration"
            android:text="@string/label_for_email"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/firstName_input_registration"
            android:layout_alignLeft="@id/textViewEmail"
            android:layout_toRightOf="@id/firstName_input_registration"
            android:text="@string/label_for_firstName"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lastName_input_registration"
            android:layout_alignLeft="@id/textViewFirstName"
            android:layout_toRightOf="@id/lastName_input_registration"
            android:text="@string/label_for_lastName"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="180dp" />

        <TextView
            android:id="@+id/textViewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/post_input_registration"
            android:layout_alignLeft="@id/textViewLastName"
            android:layout_toRightOf="@id/post_input_registration"
            android:text="@string/label_for_post"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="259dp" />

        <TextView
            android:id="@+id/textViewPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/password1_input_registration"
            android:layout_alignLeft="@id/textViewPost"
            android:layout_toRightOf="@id/password1_input_registration"
            android:text="@string/label_for_password1"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="322dp" />

        <TextView
            android:id="@+id/textViewPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/password2_input_registration"
            android:layout_alignLeft="@id/textViewPassword1"
            android:layout_toRightOf="@id/password2_input_registration"
            android:text="@string/label_for_password2"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="399dp" />
    </RelativeLayout>
</ScrollView>