<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email_input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/firstName_input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/email_input_registration"
                android:layout_below="@+id/email_input_set"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="87dp" />

            <EditText
                android:id="@+id/lastName_input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/firstName_input_set"
                android:layout_below="@+id/firstName_input_set"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="160dp" />

            <EditText
                android:id="@+id/post_input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/lastName_input_set"
                android:layout_below="@+id/lastName_input_set"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="232dp" />

            <EditText
                android:id="@+id/password1_input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/post_input_set"
                android:layout_below="@+id/post_input_set"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="304dp" />

            <EditText
                android:id="@+id/password2_input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/password1_input_set"
                android:layout_below="@+id/password1_input_set"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="381dp" />

            <Button
                android:id="@+id/registration_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password2_input_set"
                android:layout_marginTop="25dp"
                android:text="@string/action_registration"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="447dp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/email_input_set"
                android:layout_marginStart="17dp"
                android:layout_toRightOf="@+id/email_input_set"
                android:text="@string/label_set_email"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewEmail"
                android:layout_alignTop="@+id/firstName_input_set"
                android:layout_toRightOf="@id/firstName_input_set"
                android:text="@string/label_set_firstName"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="106dp" />

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewFirstName"
                android:layout_alignTop="@+id/lastName_input_set"
                android:layout_toRightOf="@id/lastName_input_set"
                android:text="@string/label_set_lastName"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="180dp" />

            <TextView
                android:id="@+id/textViewPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewLastName"
                android:layout_alignTop="@id/post_input_set"
                android:layout_toRightOf="@id/post_input_set"
                android:text="@string/label_set_post"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="259dp" />

            <TextView
                android:id="@+id/textViewPassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewPost"
                android:layout_alignTop="@+id/password1_input_set"
                android:layout_toRightOf="@id/password1_input_set"
                android:text="@string/label_set_password1"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="322dp" />

            <TextView
                android:id="@+id/textViewPassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewPassword1"
                android:layout_alignTop="@id/password2_input_set"
                android:layout_toRightOf="@id/password2_input_set"
                android:text="@string/label_set_password2"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="399dp" />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>