<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/change_pass_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/password_input_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="304dp" />

            <EditText
                android:id="@+id/password1_input_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/password_input_change"
                android:layout_below="@+id/password_input_change"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="381dp" />

            <EditText
                android:id="@+id/password2_input_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/password1_input_change"
                android:layout_below="@+id/password1_input_change"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="381dp" />

            <Button
                android:id="@+id/change_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password2_input_change"
                android:layout_marginTop="25dp"
                android:text="@string/save_changes"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="447dp" />

            <TextView
                android:id="@+id/textViewChangePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/password_input_change"
                android:layout_marginStart="17dp"
                android:layout_toRightOf="@+id/password1_input_change"
                android:text="@string/input_password"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textViewChangePass1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewChangePass"
                android:layout_alignTop="@+id/password1_input_change"
                android:layout_toRightOf="@id/password1_input_change"
                android:text="@string/input_new_password"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="106dp" />

            <TextView
                android:id="@+id/textViewChangePass2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewChangePass"
                android:layout_alignTop="@+id/password2_input_change"
                android:layout_toRightOf="@id/password2_input_change"
                android:text="@string/repeate_new_password"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="106dp" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>